package card;

public interface IDiscountCard {
    double apply(double price);
    String getCardName();
}
