package infrastructure;

public interface INotification {
    public void SendNotification(String subject, String body);
}
