package staff;

public interface BreakTaker {
    void getRest();
}
