package staff;

public interface MeetingParticipant {
    void attendMeeting();
}

