package staff;

public interface OrderTask {
    void processOrder();
}
