package staff;

public interface Slacker {
    void swingingTheLead();
}
