package staff;

public interface Worker {
    void performRoutine();
}
