@startuml
skinparam ClassAttributeIconSize 0
'skinparam monochrome true
skinparam shadowing false

package "models" {
    class Order {
        - id: String
        - items: List<Item>
        - type: OrderType
        - discountCard: IDiscountCard
        - clientEmail: String
        - destination: Address
    }
    class Item {
        - id: String
        - name: String
        - price: double
    }
    class Address {
        - city: String
        - street: String
        - zip: String
    }
}

package "order" {
    interface OrderType {
        + getTypeName(): String
        + OrderConditions(order: Order, total: double): double
        + validate(order: Order)
    }
    class OrderStandardType implements OrderType
    class OrderPremiumType implements OrderType
    class OrderBudgetType implements OrderType

    class OrderValidator {
        {static} + validateOrder(order: Order)
    }
    class OrderAmount {
        {static} + calculatingAmount(order: Order): double
    }
}

package "card" {
    interface IDiscountCard {
        + apply(price: double): double
        + getCardName(): String
    }
    class GoldCard implements IDiscountCard
    class SilverCard implements IDiscountCard
    class NewbieCard implements IDiscountCard
}

package "infrastructure" {
    interface IDatabase {
        + saveOrder(order: Order, total: double)
    }
    class RandomSQLDatabase implements IDatabase {
        - connectionString: String
    }
    class DatabaseCache implements IDatabase {
        - database: IDatabase
        - cache: Set<String>
    }

    interface INotification {
        + SendNotification(subject: String, body: String)
    }
    class NotificationManager {
        - notificationServices: List<INotification>
        + registerNotificationService(n: INotification)
        + sendNotification(subject: String, body: String)
    }
    class TelegramSender implements INotification
    class SmtpMailer implements INotification
    class NotificationLogger implements INotification
}

package "staff" {
    interface Worker {
        + performRoutine()
    }
    interface OrderTask {
        + processOrder()
    }
    interface BreakTaker {
        + getRest()
    }
    interface Slacker {
        + swingingTheLead()
    }
    interface MeetingParticipant {
        + attendMeeting()
    }

    class RobotPacker implements Worker, OrderTask, BreakTaker
    class HumanManager implements Worker, OrderTask, BreakTaker, Slacker, MeetingParticipant

    class Warehouse {
        {static} + manageWarehouse(workers: List<Worker>)
    }
}

class OrderProcessor {
    - database: IDatabase
    - notificationManager: NotificationManager
    + Process(order: Order)
}

' Relationships
Order "1" *-- "many" Item
Order "1" o-- "1" OrderType
Order "1" o-- "1" IDiscountCard
Order "1" *-- "1" Address

OrderProcessor ..> OrderValidator : uses
OrderProcessor ..> OrderAmount : uses
OrderProcessor --> IDatabase
OrderProcessor --> NotificationManager

DatabaseCache o-- IDatabase : decorates
NotificationManager "1" o-- "many" INotification

Warehouse ..> Worker : manages

@enduml